# reclaim

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  PRIVACY.md  README.md  SUPPORT.md  config.example.toml  pyproject.toml  reclaim-ai-features-spec.md  reclaim-spec.md
.github/workflows/: ci.yml  eval.yml
data/ai_models/: clutter_ranker.txt
docs/: CASE_STUDY.md  CASE_STUDY_PORTFOLIO.md  MERGE_REVIEW_feat-ai-layer.md  MERGE_REVIEW_feat-ai-ranker.md  MERGE_REVIEW_feat-ai-track-b.md  MERGE_REVIEW_feat-stage2-public.md  index.html
docs/architecture/adr/: 0001-category-tiered-retention.md  0002-sql-pushdown-candidate-generation.md  0003-model-cache-cost-aware-retention.md  0004-long-path-safe-atomic-vault-moves.md  0005-rebuildable-zero-retention-and-stale-vault-purge.md  0006-hardlink-aware-reclaimable-size-estimate.md  0007-keep-heuristic-safety-and-cluster-review.md  0008-model-cache-and-environment-exclusion-from-exact-duplicate.md  0009-standalone-python-installation-exclusion.md  0010-structural-python-environment-detection.md  0011-ai-layer-architecture-and-licenses.md  0012-phash-provisional-operating-point.md  0013-gold-set-labeling-tool.md  0014-labeling-protocol-statistical-soundness.md  0015-copydays-gold-set-dataset-choice.md  0016-eval-gate-hardening-recall-floor-and-distribution-declaration.md  0017-feature-1b-document-near-dup-and-version-chain.md  0018-metrics-integrity-never-aggregate-across-tiers.md  0019-feature-2-screenshot-burst-and-content-tagging.md  0020-feature-3-feedback-logging-ranker-deferred.md  0021-generic-clutter-likelihood-ranker.md  0022-track-b-semantic-image-grouping.md  0023-stage2-safe-mode-safety-boundary.md  0024-stage2-installer-and-ai-bundle-size.md  0025-ai-dashboard-wiring.md  0026-crash-safe-two-phase-manifest.md  0026-model-weight-revision-pinning-and-integrity.md  0027-schema-versioning-for-durable-state.md  0028-model-weight-revision-pinning-and-integrity.md
evals/: test_ai_content_tag_gold.py  test_ai_copydays_gold.py  test_ai_copydays_realistic_distribution.py  test_ai_document_gold.py  test_ai_document_similarity_gate.py  test_ai_document_templated_gold.py  test_ai_image_similarity.py  test_ai_paws_embedding_gold.py  test_ai_ranker_gold.py  test_ai_safety_gate.py  test_ai_screenshot_ocr_degradation_gate.py  test_ai_semantic_grouping_gold.py  test_ai_version_chain_gate.py  test_candidate_generation.py  test_candidate_generation_perf.py  test_dedup.py  test_executor_e2e.py  test_retention.py  test_safe_mode_gate.py  test_safety_gate.py  test_scanner_perf.py
evals/ai_fixtures/: build_content_tag_fixtures.py  build_document_realistic_tiers.py  build_document_similarity_fixtures.py  build_image_similarity_fixtures.py  build_ranker_fixtures.py  build_realistic_recompression_tiers.py  build_templated_document_fixtures.py  build_version_chain_fixtures.py  copydays_loader.py  fetch_copydays.py  fetch_gutenberg_texts.py  label_ranker_fixtures.py  paws_loader.py  ranker_llm_judge.py
evals/fixtures/: build_dedup_tree.py  build_detector_tree.py  build_executor_tree.py  build_golden_tree.py  golden_tree.json
packaging/: build_brand_assets.py  entry_point.py  reclaim.iss  test_packaged_safe_mode.ps1
reports/ai/: content_tag_operating_point.json  copydays_keep_best_disagreements.json  copydays_realistic_distribution_pr_curve.json  document_realistic_distribution_pr_curve.json  document_templated_joint_operating_point.json  paws_embedding_pr_curve.json  ranker_labeling_kappa.json  ranker_operating_point.json  screenshot_ocr_degradation_tier.json  semantic_grouping_operating_point.json
scripts/: ai_label_tool.py  bench_fsync.py  check_junit_nonzero.py  check_per_module_coverage.py  git_guard.py
src/reclaim/: cli.py  config.py  dedup.py  detectors.py  elevation.py  executor.py  first_run.py  index.py  linkinfo.py  logging_config.py  mode.py  models.py  purge.py  recovery.py  safety.py  scanner.py
src/reclaim/ai/: __init__.py  _optional.py  clutter_ranker.py  cold_start_priority.py  content_tagger.py  document_keep_best.py  document_similarity.py  document_text.py  eval_harness.py  feedback_store.py  image_embeddings.py  image_similarity.py  keep_best.py  labeling.py  labeling_app.py  minhash_lsh.py  models.py  phash.py  presentation.py  review_queue.py  safety.py  screenshot_burst.py  screenshot_ocr.py  screenshot_review.py  semantic_image_grouping.py  text_embeddings.py  version_chain.py
src/reclaim/api/: ai_orchestration.py  app.py  routes.py  schemas.py  security.py  service.py  state.py
src/reclaim/api/static/: app.js  categories.js  styles.css  tokens.css  treemap.js
src/reclaim/api/templates/: index.html
tests/: _recovery_crash_harness.py  conftest.py  test_ai_clutter_ranker.py  test_ai_cold_start_priority.py  test_ai_content_tagger.py  test_ai_document_keep_best.py  test_ai_document_similarity.py  test_ai_document_text.py  test_ai_eval_harness.py  test_ai_feedback_store.py  test_ai_image_embeddings.py  test_ai_keep_best.py  test_ai_labeling.py  test_ai_labeling_app.py  test_ai_minhash_lsh.py  test_ai_optional_extra.py  test_ai_orchestration.py  test_ai_phash.py  test_ai_presentation.py  test_ai_safety_reuse.py  test_ai_screenshot_burst.py  test_ai_screenshot_ocr.py  test_ai_screenshot_review.py  test_ai_semantic_image_grouping.py  test_ai_text_embeddings.py  test_ai_version_chain.py  test_api.py  test_api_ai.py  test_api_ai_apply_safety.py  test_cli.py  test_config.py  test_dedup.py  test_detectors.py  test_elevation.py  test_executor.py  test_git_guard.py  test_index.py  test_linkinfo.py  test_logging_config.py  test_manifest_schema_versioning.py  (+7 more)
tests/frontend/: package-lock.json  package.json  xss.test.mjs
