[project]
name = "reclaim"
version = "0.1.0"
description = "Rules-first Windows disk-cleanup tool with hard safety gates and fully recoverable actions."
authors = [
    { name = "Gaurav Gandhi", email = "gaurav.gandhi2411@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "send2trash>=1.8",
    "blake3>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Applied-AI layer (reclaim-ai-features-spec.md). The core deterministic tool installs and
# runs without ANY of these — every import is lazy/guarded (reclaim.ai._optional.require),
# so `pip install reclaim` alone never pulls these in. `pip install reclaim[ai]` /
# `uv sync --extra ai` adds them. Grows incrementally as each spec feature lands — today only
# Feature 1a Track A (pHash/dHash near-identical clustering + classical keep-best scorer)
# needs anything; later features add their own deps here (datasketch for 1b, open-clip-torch
# + hnswlib for 1a Track B, rapidocr/pytesseract for Feature 2, lightgbm for Feature 3),
# each recorded with its license in the ADR that lands it (ADR-0011 covers the deps below).
ai = [
    "imagehash>=4.3",             # BSD-2-Clause — pHash/dHash perceptual hashing
    "opencv-python-headless>=4.9", # Apache-2.0 — Laplacian-variance sharpness scoring
    "pillow>=10.0",                # HPND (permissive) — image I/O, resolution/exposure checks
]

[project.scripts]
reclaim = "reclaim.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "T20", "DTZ", "PTH", "TRY", "RUF"]
ignore = [
    "TRY003", # long messages inside typed exception classes are fine here
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "S104"]   # assert/temp paths in fixtures; S104 fires on the
                                         # literal "0.0.0.0" strings these tests assert get
                                         # REJECTED, not bound to (see test_cli.py's bind-gate
                                         # tests) — the rule can't distinguish the two contexts.
"evals/**" = ["S101", "S108"]
"scripts/**" = ["T201"]                 # print() is fine in operational scripts

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["reclaim"]
mypy_path = "src"

# send2trash ships no py.typed/stub package (unlike blake3, which does) — ignoring missing
# imports for just this module rather than installing a types-Send2Trash dev dependency.
[[tool.mypy.overrides]]
module = "send2trash.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/reclaim"]
omit = ["src/reclaim/cli.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
