[project]
name = "reclaim"
version = "0.1.0"
description = "Rules-first Windows disk-cleanup tool with hard safety gates and fully recoverable actions."
authors = [
    { name = "Gaurav Gandhi", email = "gaurav.gandhi2411@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "send2trash>=1.8",
    "blake3>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Applied-AI layer (reclaim-ai-features-spec.md). The core deterministic tool installs and
# runs without ANY of these — every import is lazy/guarded (reclaim.ai._optional.require),
# so `pip install reclaim` alone never pulls these in. `pip install reclaim[ai]` /
# `uv sync --extra ai` adds them. Grows incrementally as each spec feature lands — Feature 1a
# Track A (pHash/dHash + classical keep-best) needs the first three; Feature 1b (MinHash/LSH
# document near-dup + sentence-embedding residual + version-chain) adds the rest (ADR-0017
# covers licenses). Still to come: open-clip-torch + hnswlib for 1a Track B, rapidocr/
# pytesseract for Feature 2, lightgbm for Feature 3.
ai = [
    "imagehash>=4.3",             # BSD-2-Clause — pHash/dHash perceptual hashing
    "opencv-python-headless>=4.9", # Apache-2.0 — Laplacian-variance sharpness scoring
    "pillow>=10.0",                # HPND (permissive) — image I/O, resolution/exposure checks
    "datasketch>=1.6",             # MIT — MinHash/LSH near-dup prefilter (Feature 1b Stage 1)
    "sentence-transformers>=3.0",  # Apache-2.0 — all-MiniLM-L6-v2 (Feature 1b Stage 2, residual only)
    "python-docx>=1.1",            # MIT — local .docx text extraction, never logged
    "pypdf>=5.0",                  # BSD-3-Clause — local .pdf text extraction, never logged
    "rapidocr-onnxruntime>=1.3",   # Apache-2.0 — local OCR (Feature 2), pip-only (no system
    # binary, unlike Tesseract) — bundled ONNX models, zero network calls at inference time.
    # NOTE: pulls in full `opencv-python` (GUI-capable) as a transitive dependency, which
    # coexists with the `opencv-python-headless` pinned above — both packages provide the
    # `cv2` module; whichever installs last determines the on-disk build, but this has not
    # been observed to break any existing `cv2` usage (keep_best.py's headless-only calls —
    # Laplacian variance, grayscale imread — work identically either way). See ADR-0019.
]

[project.scripts]
reclaim = "reclaim.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "pyarrow>=17.0",  # Apache-2.0 — reads the PAWS-Wiki gold-set parquet files
    # (ADR-0017's measurement tooling only, never imported by src/reclaim/**)
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "T20", "DTZ", "PTH", "TRY", "RUF"]
ignore = [
    "TRY003", # long messages inside typed exception classes are fine here
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "S104"]   # assert/temp paths in fixtures; S104 fires on the
                                         # literal "0.0.0.0" strings these tests assert get
                                         # REJECTED, not bound to (see test_cli.py's bind-gate
                                         # tests) — the rule can't distinguish the two contexts.
"evals/**" = ["S101", "S108"]
"scripts/**" = ["T201"]                 # print() is fine in operational scripts

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["reclaim"]
mypy_path = "src"

# send2trash ships no py.typed/stub package (unlike blake3, which does) — ignoring missing
# imports for just this module rather than installing a types-Send2Trash dev dependency.
[[tool.mypy.overrides]]
module = "send2trash.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/reclaim"]
omit = ["src/reclaim/cli.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
